change to Thomas website

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="icon" href="images/blacktocat.png">
 
-    <title>shadySource.GitHub.io by shadySource</title>
+    <title>thomas32426.GitHub.io by thomas32426</title>
   </head>
 
   <body>
     <header>
       <div class="container">
-        <h1>shadySource.GitHub.io</h1>
+        <h1>thomas32426.GitHub.io</h1>
         <h2>by Alec Graves</h2>
 
         <section id="gitLink">
-          <a href="https://github.com/shadySource" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/thomas32426" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
     </header>
@@ -31,7 +31,7 @@
         <h3>
 <!--
 <a id="welcome-to-github-page" class="anchor" href="#welcome-to-github-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my GitHub Page!</h3>
-<p>This is a page that I created to facilitate the distribution of labor-intensive tasks. I have created a lightweight javascript app for this site that will allow people to volunteer their time and label data. Once a sufficient number of data labels have been submitted, I will begin training a <a href="https://github.com/shadySource/yolo-keras">neural network</a> to find patterns in the labeled data.</p>
+<p>This is a page that I created to facilitate the distribution of labor-intensive tasks. I have created a lightweight javascript app for this site that will allow people to volunteer their time and label data. Once a sufficient number of data labels have been submitted, I will begin training a <a href="https://github.com/thomas32426/yolo-keras">neural network</a> to find patterns in the labeled data.</p>
 -->
 <h3>
 <a id="data-labeling" class="anchor" href="#data-labeling" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Underwater Data Labeler</h3>
@@ -63,7 +63,7 @@
 <p>Label some data, download the file, and attach it to the email made by the email button. Thank you for your contribution!</p>
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
-<p>If you would like to contact me or view my source, check out my <a href="https://github.com/shadySource/">GitHub profile</a>.
+<p>If you would like to contact me or view my source, check out my <a href="https://github.com/thomas32426/">GitHub profile</a>.
       </section>
     </div>
 
