--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="container">
         <h1>thomas32426.GitHub.io</h1>
-        <h2>by Alec Graves, technically</h2>
+        <h2>by Alec Graves, technically.</h2>
 
         <section id="gitLink">
           <a href="https://github.com/thomas32426" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
